refactored round flat buttons, fixed rounded button spacing issue, included border styles/width classes, added jquery easing cdn/script in footer

--- a/scss/components/_promo-boxes.scss
+++ b/scss/components/_promo-boxes.scss
@@ -1,7 +1,5 @@
 /*PROMO BOXES*/
-<<<<<<< HEAD
-
-@media only screen and (min-width: 960px){
+/*@media only screen and (min-width: 960px){
   .promo-box-round-title-1 {
     width: 31.333%;
     float: none;
@@ -10,11 +8,11 @@
     padding: 60px 15px;
   }
 }
+*/
 
-=======
 //TODO: Should these have a hover effect?
 //TODO: Should the border color either be added to our list of colors or use one of our existing colors?
->>>>>>> 801ee1a7e281f2eeee7c3997449da789f712bdae
+
 .promo-box-round-title-1 {
     display: inline-block;
     border: 1px solid #675757;
